Added an option to save jobs